@@ -1,3 +1,7 @@
+2005-01-12  Davide Viti  <zinosat@tiscali.it>
+
+	* build_index.sh was added in order to build "index.html" everytime "l10n-spellcheck.sh" is run
+
 2005-01-11  Davide Viti  <zinosat@tiscali.it>
 
 	* Added support for "ga" language
